<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="844dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/LoginTxtView"
        android:textColor="#32349A"
        app:layout_constraintEnd_toEndOf="@+id/SignUpButton"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/SignUpButton"
        app:layout_constraintTop_toBottomOf="@+id/SignUpButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/passwordTxtBx"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signupEmail"
        app:layout_constraintStart_toStartOf="@+id/signupEmail"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/emailTxtBx"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signupLastname"
        app:layout_constraintStart_toStartOf="@+id/signupLastname"
        app:layout_constraintTop_toBottomOf="@+id/signupLastname" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/FNameTxtView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/LNameTxtView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signupFirstname"
        app:layout_constraintStart_toStartOf="@+id/signupFirstname"
        app:layout_constraintTop_toBottomOf="@+id/signupFirstname" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="348dp"
        android:layout_height="203dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_862714" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/emailHolder"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/passwordHolder"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/signupLastname"
        android:layout_width="347dp"
        android:layout_height="69dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/LnameHolder"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/signupFirstname"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:autoText="false"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/FnameHolder"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/buttonSignup"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="@+id/signupPassword"
        app:layout_constraintStart_toStartOf="@+id/signupPassword"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>